--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,5 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
 <%= link_to '<< Back To Articles List', articles_path %>
+<br>
+<%= link_to 'Delete', article_path(@article), method: :delete, data: {confirm: "Really delete the article?"} %>
